cluster/apps/monitorrent/monitorrent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitorrent
  labels:
    app.kubernetes.io/name: monitorrent
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: monitorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: monitorrent
    spec:
      containers:
        - name: monitorrent
          image: werwolfby/alpine-monitorrent:1.1.12
          imagePullPolicy: IfNotPresent
          command:
            - "python"
            - "server.py"
            - "--db-path"
            - "/config/monitorrent.db"
          ports:
            - name: http
              containerPort: 6687
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 200Mi
              cpu: 100m
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: monitorrent-config
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
---
apiVersion: v1
kind: Service
metadata:
  name: monitorrent
  labels:
    app.kubernetes.io/name: monitorrent
spec:
  type: ClusterIP
  ports:
    - port: 6687
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: monitorrent
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitorrent
  labels:
    app.kubernetes.io/name: monitorrent
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host monitorrent.home.devmem.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitorrent
                port:
                  number: 6687
  tls:
    - hosts:
        - *host
